--- a/config/attack_patterns_learning.conf
+++ b/config/attack_patterns_learning.conf
@@ -1,3 +1,117 @@
+# ===================================================================================
+# SISTEMA DE APRENDIZADO CONTÍNUO - PADRÕES DE ATAQUES
+# ===================================================================================
+# Formato: PADRÃO|CATEGORIA|DESCRIÇÃO|PESO|TAGS
+# Exemplo: "nikto|Scanner|Scanner de vulnerabilidades web|7|scanner,web,automated"
+# ===================================================================================
+
+# PADRÕES EXISTENTES (BASE)
+reverse shell|CRÍTICO|Reverse shell detectado|10|shell,backdoor,crítico
+shell\.php|CRÍTICO|Arquivo shell malicioso|10|shell,backdoor,crítico
+backdoor|CRÍTICO|Backdoor detectado|10|backdoor,malware,crítico
+trojan|CRÍTICO|Trojan detectado|10|trojan,malware,crítico
+virus|CRÍTICO|Vírus detectado|10|virus,malware,crítico
+root shell|CRÍTICO|Shell com privilégios root|10|shell,privilege,crítico
+privilege escalation|CRÍTICO|Elevação de privilégios|10|privilege,escalation,crítico
+data exfiltration|CRÍTICO|Exfiltração de dados|10|data,exfiltration,crítico
+malicioso.*shell|CRÍTICO|Shell malicioso|10|shell,malicioso,crítico
+Comando injetado|CRÍTICO|Comando injetado|10|injection,command,crítico
+cat /flag|CRÍTICO|Tentativa de ler flag|10|flag,read,crítico
+whoami|CRÍTICO|Comando whoami|10|enumeration,user,crítico
+ls;.*cat|CRÍTICO|Comandos concatenados|10|command,chaining,crítico
+rm -rf|CRÍTICO|Comando destrutivo|10|destruction,delete,crítico
+wget.*http://|CRÍTICO|Download remoto|10|download,remote,crítico
+curl.*http://|CRÍTICO|Download remoto|10|download,remote,crítico
+
+# ATAQUES WEB
+SQL Injection|ALTO|Injeção SQL|7|sql,injection,web
+XSS|ALTO|Cross-Site Scripting|7|xss,web,injection
+LFI|ALTO|Local File Inclusion|7|lfi,file,inclusion
+RFI|ALTO|Remote File Inclusion|7|rfi,file,inclusion
+Command Injection|ALTO|Injeção de comandos|7|command,injection,web
+Webshell Upload|ALTO|Upload de webshell|7|webshell,upload,web
+Força bruta|ALTO|Tentativa de força bruta|7|brute,force,auth
+<script|ALTO|Tag script maliciosa|7|script,xss,web
+union.*select|ALTO|SQL Union injection|7|sql,union,injection
+or.*1=1|ALTO|SQL Boolean injection|7|sql,boolean,injection
+../../etc/passwd|ALTO|Path traversal|7|path,traversal,lfi
+
+# SCANNERS E FERRAMENTAS
+nikto|ALTO|Scanner de vulnerabilidades|7|scanner,web,automated
+sqlmap|ALTO|Scanner SQL injection|7|scanner,sql,automated
+nmap|ALTO|Scanner de portas|7|scanner,network,automated
+dirb|ALTO|Scanner de diretórios|7|scanner,web,automated
+gobuster|ALTO|Scanner de diretórios|7|scanner,web,automated
+wpscan|ALTO|Scanner WordPress|7|scanner,wordpress,automated
+
+# DIRETÓRIOS SENSÍVEIS
+/admin/|ALTO|Acesso a admin|7|admin,sensitive,web
+/wp-admin|ALTO|Acesso WordPress admin|7|wordpress,admin,web
+/phpmyadmin|ALTO|Acesso phpMyAdmin|7|phpmyadmin,database,web
+/\.env|ALTO|Arquivo de configuração|7|config,env,web
+/\.git|ALTO|Repositório Git|7|git,version,web
+/\.htaccess|ALTO|Arquivo htaccess|7|htaccess,config,web
+/server-status|ALTO|Status do servidor|7|status,server,web
+/wp-login\.php|ALTO|Login WordPress|7|wordpress,login,web
+/api/upload|ALTO|API de upload|7|api,upload,web
+
+# ERROS HTTP
+Erro 403|ALTO|Acesso negado|7|error,403,web
+Erro 404|MÉDIO|Página não encontrada|4|error,404,web
+Erro 500|ALTO|Erro interno do servidor|7|error,500,web
+
+# SSH
+Invalid user|ALTO|Usuário inválido SSH|7|ssh,user,invalid
+Failed password|ALTO|Senha falhou SSH|7|ssh,password,failed
+Accepted password|MÉDIO|Senha aceita SSH|4|ssh,password,accepted
+session opened|MÉDIO|Sessão SSH aberta|4|ssh,session,opened
+session closed|BAIXO|Sessão SSH fechada|1|ssh,session,closed
+Connection closed|BAIXO|Conexão SSH fechada|1|ssh,connection,closed
+preauth|MÉDIO|Pré-autenticação SSH|4|ssh,preauth
+
+# MYSQL
+Access denied|ALTO|Acesso negado MySQL|7|mysql,access,denied
+SELECT.*FROM.*sensitive|ALTO|Consulta dados sensíveis|7|mysql,select,sensitive
+DROP.*TABLE|CRÍTICO|Drop de tabela|10|mysql,drop,crítico
+DELETE.*FROM|ALTO|Delete de dados|7|mysql,delete,data
+UPDATE.*WHERE|ALTO|Update de dados|7|mysql,update,data
+INSERT.*INTO|MÉDIO|Insert de dados|4|mysql,insert,data
+SHOW.*DATABASES|MÉDIO|Lista databases|4|mysql,show,databases
+SHOW.*TABLES|MÉDIO|Lista tabelas|4|mysql,show,tables
+
+# NGINX
+Permission denied|ALTO|Permissão negada|7|nginx,permission,denied
+too large body|MÉDIO|Corpo muito grande|4|nginx,body,large
+upstream response|MÉDIO|Resposta upstream|4|nginx,upstream,response
+fastcgi|MÉDIO|Erro FastCGI|4|nginx,fastcgi,error
+
+# ATIVIDADES NORMAIS
+backup|INFO|Backup do sistema|0|backup,system,normal
+Verificação antivírus|INFO|Verificação antivírus|0|antivirus,scan,normal
+Atualização automática|INFO|Atualização automática|0|update,auto,normal
+Backup iniciado|INFO|Backup iniciado|0|backup,started,normal
+Login sucesso|BAIXO|Login bem-sucedido|1|login,success,auth
+Upload arquivo|BAIXO|Upload de arquivo|1|upload,file,normal
+Download arquivo|BAIXO|Download de arquivo|1|download,file,normal
+Consulta registro|BAIXO|Consulta de registro|1|query,record,normal
+
+# PADRÕES ESPECÍFICOS DO ARQUIVO DE TESTE
+Upload arquivo malicioso|CRÍTICO|Upload de arquivo malicioso|10|upload,malicious,crítico
+SQL Injection tentativa|ALTO|Tentativa de SQL Injection|7|sql,injection,web
+Força bruta detectada|ALTO|Força bruta detectada|7|brute,force,auth
+Inclusão remota|ALTO|Inclusão remota de arquivo|7|rfi,file,inclusion
+Fetch remoto|ALTO|Fetch remoto via URL|7|rfi,remote,web
+Payload XSS|ALTO|Payload XSS detectado|7|xss,web,injection
+Download arquivo:.*senha|ALTO|Download de arquivo com senha|7|download,sensitive,data
+Download arquivo:.*secret|ALTO|Download de arquivo secreto|7|download,sensitive,data
+Download arquivo:.*token|ALTO|Download de arquivo com token|7|download,sensitive,data
+Download arquivo:.*credential|ALTO|Download de credenciais|7|download,sensitive,data
+Download arquivo:.*data_dump|ALTO|Download de dump de dados|7|download,sensitive,data
+Upload arquivo:.*senha|ALTO|Upload de arquivo com senha|7|upload,sensitive,data
+Erro de permissão|MÉDIO|Erro de permissão|4|permission,error,access
+Login falha|MÉDIO|Falha no login|4|login,failed,auth
+
+# PADRÕES XSS EXISTENTES (mantidos)
 ""><STYLE>@import""javascript:alert('XSS')"";</STYLE>|MÉDIO|XSS Refletido - CSS + import JS: Executar alert via CSS injection|4|xss,web,injection
 >""'><img%20src%3D%26%23x6a;…alert(%26quot;%20XSS%20Test%20Successful%26quot;)>|MÉDIO|XSS Refletido - URL-Encoding + HTML entity evasion: Executar alert com codificação dupla|4|xss,web,injection
 >%22%27><img%20src%3d%22javascript:alert(%27%20XSS%27)%22>|MÉDIO|XSS Refletido - URL-Encoding parcial: Executar alert|4|xss,web,injection
